click on cell to change to static color works

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html{
     background-color: black;
 }
 body{
+    margin:auto;
     background-color: black;
 }
 
@@ -9,13 +10,15 @@ p{
     color: white;
 }
 
-#table{}
+#table{
+    margin:auto;
+}
 
 tr{
 }
 
 td{
-    background-color: gray;
+    background-color: rgb(27, 150, 152);
     height: 50px;
     width: 50px;
 }
